lldpd (0.9.8)
  * Changes:
    + "Station" capability is only set if no other bit is set.
    + Use ethtool to get permanent address for bonds and teams. This
      might provide different results than the previous method. Some
      devices may still use the previous method.
  * Fixes:
    + Handle team interfaces like a bond. Real MAC address cannot be
      retrieved yet.

lldpd (0.9.7)
  * Changes:
    + Attach remote TTL to port instead of chassis.
    + JSON support is now built-in and unconditionally enabled. Use
      --enable-json0 to keep the pre-0.9.2 json-c format.
    + When logging to syslog and daemonizing, don't log to stderr.
    + vxlan interfaces are now ignored as they are multi-point interfaces.
    + Maximum number of neighbors for an interface is increased from 4 to 32.

lldpd (0.9.6)
  * Changes:
    + Add a compile-time option to restore pre-0.9.2 JSON format (when
      using json-c). Use `--enable-json0` to enable this option.
    + Support for newer ethtool interface on Linux
      (ETHTOOL_GLINKSETTINGS) and additional speed settings.
    + Current MAU type is displayed even when autoneg is off.
    + Increase netlink receive buffer by default. Can be changed at
      compile-time through ./configure.
  * Fixes:
    + Correctly parse LLDP-MED civic address when the length of the
      TLV exceeds the length of the address.
    + Fix 100% CPU on some rare error condition.
    + Fix lost timer when an interface is enslaved on Linux.

lldpd (0.9.5)
  * Changes:
    + More Ethernet media supported. However, RFC4836 is quite
      out-of-date with respected to 10G+ speeds, bringing some
      inaccuracies.
    + Directly get media information for an interface without using
      the privileged process.
    + LLDP-MED capability TLV is not sent when LLDP-MED is not enabled,
      even if other LLDP-MED TLV are present.
  * Fixes:
    + Compilation fix with older versions of GCC.